--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 services:
   app:
     build: .
@@ -6,9 +6,10 @@ services:
       - "3000:3000"
     depends_on:
       - mongodb
+    environment:
+      MONGODB_URI: "mongodb://mongodb:27017/your_test_db"
   mongodb:
-    image: mongo
-    hostname: mongodb
+    image: mongo:4.4
     ports:
       - "27017:27017"
     volumes:
